# fri_final_project

./: .gitignore  README.md  current_history.txt  its_working.txt  start_instruction.txt
install/: local_setup.sh  setup.sh
install/arm_launch/share/arm_launch/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
install/azure_kinect_ros_driver/share/azure_kinect_ros_driver/: package.dsv  package.ps1  package.sh
install/recognition_node/lib/recognition_node/: gesture_recognition_node
install/recognition_node/share/recognition_node/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robotiq_description/share/robotiq_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
install/robotiq_gripper_driver/lib/robotiq_gripper_driver/: gripper_driver
install/robotiq_gripper_driver/share/robotiq_gripper_driver/: package.bash  package.dsv  package.ps1  (+2 more)
log/: latest_build
paper/: main.tex  project.bib
src/calculate_angle/: package.xml  setup.cfg  setup.py
src/calculate_angle/calculate_angle/: angle_calculator.py
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/mimic_hand/: package.xml  setup.cfg  setup.py
src/mimic_hand/mimic_hand/: mimic_hand.py
src/recognition_node/: package.xml  setup.cfg  setup.py
src/recognition_node/recognition_node/: angle_calculator.py  gesture_recognition.py  gesture_recognition_node.py
src/ur5_wave/: package.xml  setup.cfg  setup.py
src/ur5_wave/ur5_wave/: wave.py
(+343 files in other folders)
